change #1 Add phone number field to user

--- a/Layout/authwindows/register.html
+++ b/Layout/authwindows/register.html
@@ -32,6 +32,18 @@
           </div>
           <input type="text" name="username" required placeholder="Enter your username">
         </label>
+
+
+
+        <label>
+          <div class="input-container">
+            <img src="../imagenes/user-icon.png" alt="User Icon">
+          </div>
+          <input type="number" name="phone"  placeholder="Enter your phone number">
+        </label>
+
+
+
         <label>
           <div class="input-container">
             <img src="../imagenes/email-icon.png" alt="Email Icon">
